--- a/js-normal/slideshow/style.css
+++ b/js-normal/slideshow/style.css
@@ -6,9 +6,7 @@ img {
   height: 200px;
 }
 
-/* チャレンジ問題 */
-
-/* .btn-wrap {
+.btn-wrap {
   width: 300px;
   display: flex;
   justify-content: space-between;
@@ -16,6 +14,4 @@ img {
 
 .form-wrap {
   display: flex;
-} */
-
-/* 追加チャレンジ問題 ここまで */
+}
